--- a/404.html
+++ b/404.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Esteban ALdana</title>
+        <title>Esteban Aldana</title>
         <script type="text/javascript">
             const redirects={
-                "resume": "resume.pdf"
+                "resume": "resume.pdf",
+                "about" : "about.html"
             }
 
             const path = window.location.pathname.substring(1).toLocaleLowerCase();
