--- a/about.html
+++ b/about.html
@@ -9,8 +9,8 @@
 </head>
 
 <ul class = "nav">
-    <li><a href="/home">Projects</a></li>
-    <li><a href="about">About Me</a></li>
+    <li><a href="/home">Home</a></li>
+    <li><a href="/home">About</a></li>
     <li><a href="https://elestebann.github.io/resume.pdf">Resume</a></li>
 </ul>
 
